--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Convert global APPS_ARRAY to matrix
         id: set-matrix
         run: |
-          echo matrix=$(jq '[.[] | select(.itch == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
+          echo matrix=$(jq '[.[]]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
           echo matrix_itch=$(jq '[.[] | select(.itch == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
           echo matrix_pypi=$(jq '[.[] | select(.pypi == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
 
@@ -126,14 +126,3 @@ jobs:
         run: |
           echo "Building ${{ matrix.name }} at path: ${{ matrix.path }}"
 
-  pippo:
-    name: Pippo ${{ matrix.name }}
-    needs: generate-matrix
-    runs-on: self-hosted
-    strategy:
-      matrix:
-        include: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
-    steps:
-      - name: Build ${{ matrix.name }}
-        run: |
-          echo "Building ${{ matrix.name }} at path: ${{ matrix.path }}"
