--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,10 @@ jobs:
           _ALL_VERSIONS=""
 
           echo '::group::Print the Versions'
-            release-helper --config .release-please-config.json --manifest .release-please-manifest.json info            done
+            release-helper \
+              --config .release-please-config.json \
+              --manifest .release-please-manifest.json \
+              info
           echo '::endgroup::'
 
           echo '::group::Update the Versions'
